--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,69 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .container {
+  height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   width: 100%;
-  background-color: blueviolet;
+}
+
+.container:after {
+  content: '';
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-image: url('./pattern.jpg');  
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.9;
 }
 
 .container button {
   color: #fff;
-  background-color: #000;
+  background-color: #5cb85c;
+  border-color: #4cae4c;
   border: none;
   font-size: 16px;
   border-radius: 3px;
   width: 200px;
+  height: 50px;
   text-align: center;
   padding: 7px 0;
   margin: 10px auto;
+  text-transform: uppercase;
 }
 
 .container button:hover {
   cursor: pointer;
 }
+
+.quote {
+  width: 600px;
+  font-size: 28px;
+  color: white;
+  position: relative;
+  background-color: black;
+  border-radius: 20px;
+  padding: 0px 25px;
+  opacity: 0.8
+}
+
+.author {
+  float: right;
+}
+
+.title {
+  position: absolute;
+  top: 0;
+}
+
